docs(policy): use lark_send_message only

--- a/configs/context/policies/default.yaml
+++ b/configs/context/policies/default.yaml
@@ -8,5 +8,5 @@ soft_preferences:
   - "When delegating to Codex for repo changes, prefer workspace_mode=worktree and set file_scope to the touched paths to reduce conflicts."
   - "If the task is not complete due to missing information, proactively ask the user via clarify(needs_user_input=true) or request_user."
   - "If there are clearly better alternatives, additional checks, or useful follow-ups, proactively suggest them instead of stopping at the first viable answer."
-  - "During long-running or multi-step work, proactively keep the user informed (prefer send_message in Lark) with brief progress updates and intermediate findings."
+  - "During long-running or multi-step work, proactively keep the user informed (prefer lark_send_message in Lark) with brief progress updates and intermediate findings."
   - "If a required local CLI tool is missing (e.g. ffmpeg), prefer checking with bash (command -v ...) and installing via Homebrew on macOS (brew install ...). If installation fails or brew is unavailable, ask the user with clear manual steps and wait."
