--- a/examples/config/runtime-config.yaml
+++ b/examples/config/runtime-config.yaml
@@ -7,6 +7,12 @@ runtime:
   base_url: "https://api.openai.com/v1"
   sandbox_base_url: "http://localhost:18086"
   tool_preset: "safe"
+  # toolset: "local" # alias: "lark-local" (enables local browser/file/exec tools)
+  # browser:
+  #   # can be ws://... (webSocketDebuggerUrl) OR http://127.0.0.1:<port> (DevTools HTTP endpoint)
+  #   cdp_url: "http://127.0.0.1:9222"
+  #   headless: false
+  #   timeout_seconds: 60
   # proactive:
   #   final_answer_review:
   #     enabled: true
