docs: document llama.cpp backend

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@
 # TAVILY_API_KEY=your-tavily-key
 # ARK_API_KEY=your-ark-key
 
+# Hugging Face (optional; for `alex llama-cpp pull` on private repos)
+# HUGGINGFACE_TOKEN=
+
 # Cloudflare (attachments)
 # CLOUDFLARE_ACCOUNT_ID=
 # CLOUDFLARE_ACCESS_KEY_ID=
