--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
           cache: true
 
+      - name: 🧱 Check architecture boundaries
+        run: make check-arch
+
       - name: 🚦 Run golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
