chore(arch): add policy gate, ci checks, and layered docs updates

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ apply_patch/
 
 # coverage
 coverage/
+artifacts/
 
 # os
 .DS_Store
@@ -142,6 +143,7 @@ web/test-results/*
 .pids/*
 cmd/alex/alex
 internal/llm/logs/requests/llm.jsonl
+internal/infra/llm/logs/requests/llm.jsonl
 logs/requests/llm.jsonl
 logs/requests/t.json
 alex-exec-*/*
