--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,17 @@ jobs:
       - name: 🧱 Check architecture boundaries
         run: make check-arch
 
+      - name: 🧭 Check architecture policy
+        run: make check-arch-policy
+
+      - name: 📦 Upload architecture report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: arch-report
+          path: artifacts/arch-report.json
+          if-no-files-found: warn
+
       - name: 🚦 Run golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
