--- a/evaluation/agent_eval/datasets/foundation_eval_cases_user_habit_soul_memory.yaml
+++ b/evaluation/agent_eval/datasets/foundation_eval_cases_user_habit_soul_memory.yaml
@@ -101,3 +101,43 @@ scenarios:
     category: "user_habit_soul_memory"
     intent: "Recall privacy habit constraints and write_attachment redacted output only."
     expected_tools: ["memory_search", "write_attachment"]
+
+  - id: "habit-recall-prior-format-choice"
+    category: "user_habit_soul_memory"
+    intent: "Recall the preferred delivery format from earlier interactions before drafting output."
+    expected_tools: ["memory_search"]
+
+  - id: "habit-open-verbatim-style-note"
+    category: "user_habit_soul_memory"
+    intent: "Open verbatim style guideline lines from memory to avoid tone drift."
+    expected_tools: ["memory_get"]
+
+  - id: "habit-ambiguous-style-switch"
+    category: "user_habit_soul_memory"
+    intent: "Historical style notes conflict on concise versus exhaustive output; ask user to resolve."
+    expected_tools: ["clarify"]
+
+  - id: "habit-human-consent-private-context"
+    category: "user_habit_soul_memory"
+    intent: "Private personal preference context needs explicit user consent before reuse."
+    expected_tools: ["request_user"]
+
+  - id: "habit-recall-and-plan-trajectory"
+    category: "user_habit_soul_memory"
+    intent: "Use soul continuity anchors to plan multi-round response trajectory."
+    expected_tools: ["memory_search", "plan"]
+
+  - id: "habit-recall-and-dashboard-emit"
+    category: "user_habit_soul_memory"
+    intent: "Recall preference hierarchy and emit a structured dashboard payload for quick review."
+    expected_tools: ["memory_search", "a2ui_emit"]
+
+  - id: "habit-recall-and-schedule-rhythm"
+    category: "user_habit_soul_memory"
+    intent: "Use remembered cadence preferences to create recurring calendar slots automatically."
+    expected_tools: ["memory_search", "lark_calendar_create"]
+
+  - id: "habit-open-proof-and-upload"
+    category: "user_habit_soul_memory"
+    intent: "Open soul continuity proof lines and upload final document attachment."
+    expected_tools: ["memory_get", "lark_upload_file"]
